# r2d2-homeassistant

./: CHANGELOG.md  README.md  hacs.json  pyproject.toml  release-please-config.json  renovate.json5
custom_components/r2d2/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  select.py  sensor.py  services.yaml
