[project]
name = "r2d2-homeassistant"
version = "1.0.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF012", # mutable class attrs are idiomatic in HA entities
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.r2d2"]

[tool.pyright]
pythonVersion = "3.12"
include = ["custom_components/r2d2"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
